--- a/src/main/resources/views/MainFrame.fxml
+++ b/src/main/resources/views/MainFrame.fxml
@@ -64,23 +64,38 @@
     </top>
 
     <center>
-        <SplitPane dividerPositions="0.2">
-            <TreeView fx:id="chunkTree"/>
+        <TabPane fx:id="tabPane">
+            <Tab text="Chunks" closable="false">
+                <SplitPane fx:id="chunksSplitPane">
+                    <TreeView fx:id="chunkTree"/>
+                    <SplitPane fx:id="rightSplitPane" orientation="VERTICAL" dividerPositions="0.2">
+                        <TextArea fx:id="topTextArea"
+                                  style="-fx-font-family: monospace; -fx-text-fill: #000000; -fx-font-weight: bold;"/>
 
-            <SplitPane fx:id="rightSplitPane" orientation="VERTICAL" dividerPositions="0.2">
-                <TextArea fx:id="topTextArea"
-                          style="-fx-font-family: monospace; -fx-text-fill: #000000; -fx-font-weight: bold;"/>
-
-                <ScrollPane fx:id="imageScrollPane" fitToWidth="true" fitToHeight="true" pannable="true">
-                    <VBox fx:id="chunkInfoBox">
-                        <StackPane>
-                            <ImageView fx:id="imageView" preserveRatio="true" />
-                        </StackPane>
-                        <TreeView fx:id="textTree" />
-                    </VBox>
-                </ScrollPane>
-            </SplitPane>
-        </SplitPane>
+                        <ScrollPane fx:id="imageScrollPane" fitToWidth="true" fitToHeight="true" pannable="true">
+                            <VBox fx:id="chunkInfoBox">
+                                <StackPane>
+                                    <ImageView fx:id="imageView" preserveRatio="true" />
+                                </StackPane>
+                                <TreeView fx:id="textTree" />
+                            </VBox>
+                        </ScrollPane>
+                    </SplitPane>
+                </SplitPane>
+            </Tab>
+            <Tab text="Pages" closable="false">
+                <SplitPane fx:id="pagesSplitPane">
+                    <ListView fx:id="pageList"/>
+                    <ScrollPane fx:id="pageScrollPane" fitToWidth="true" fitToHeight="true" pannable="true">
+                        <VBox fx:id="pageBox">
+                            <StackPane>
+                                <ImageView fx:id="pageView" preserveRatio="true" />
+                            </StackPane>
+                        </VBox>
+                    </ScrollPane>
+                </SplitPane>
+            </Tab>
+        </TabPane>
     </center>
 
     <bottom>
