DJV-14: Show a navigation menu when present

--- a/src/main/resources/views/MainFrame.fxml
+++ b/src/main/resources/views/MainFrame.fxml
@@ -34,6 +34,9 @@
                     <MenuItem fx:id="showStatistics" text="Show statistics" onAction="#onShowStatistics"/>
                 </Menu>
 
+                <Menu fx:id="navigationMenu" text="Navigation">
+                </Menu>
+
                 <Menu text="Help">
                     <MenuItem text="About" onAction="#onAbout"/>
                 </Menu>
