DJV-14: Show a navigation menu when present (#14)
* DJV-14: Show a navigation menu when present

* adding base implementation of TableOfContentsDialog

* disable menu items when it's necessary

* adding unit tests for DjVuFileImpl + cosmetic refactoring

* adding unit tests for GUI

* adjust testTableOfContextsDialogSubNode to cover another url type case

* menu page calculation refactoring

* fix logging, cosmetic refactoring

* unit tests for DjVuModelImpl, cosmetic refactoring

* code clean up

--- a/src/main/resources/views/MainFrame.fxml
+++ b/src/main/resources/views/MainFrame.fxml
@@ -31,7 +31,9 @@
                 </Menu>
 
                 <Menu text="View">
-                    <MenuItem fx:id="showStatistics" text="Show statistics" onAction="#onShowStatistics"/>
+                    <MenuItem fx:id="navigationMenu" text="Navigation" onAction="#onOpenNavigation"/>
+                    <SeparatorMenuItem/>
+                    <MenuItem fx:id="showStatisticsMenu" text="Show statistics" onAction="#onShowStatistics"/>
                 </Menu>
 
                 <Menu text="Help">
